# ventauri

./: .gitignore  README.md  Vencord.user.js  package-lock.json  package.json  vencordstyles
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
