[package]
name = "ventauri"
version = "0.1.0"
description = "Discord with Vencord via Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "system-tray", "shell-open", "http-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]

custom-protocol = ["tauri/custom-protocol"]
